MAJOR FIX: Stop wall of tickers + Scanner reliability
 TICKER EXTRACTION OVERHAUL:

1. Implemented 4-stage resolver with scoring:
   - Stage 1: Exact symbol mention (score 100)
   - Stage 2: Cashtag patterns  (score 100)
   - Stage 3: Exact company name match (score 90)
   - Stage 4: Alias match (score 75)
   - Stage 5: Fuzzy match only if no high-confidence matches (score 60)

2. Context penalties and filtering:
   - Penalize body-only matches (-20 points)
   - Only symbols in Symbol Master are valid
   - Cap results: max 1 ticker for company articles, max 3 for multi-company
   - Minimum score threshold: 85 (high confidence only)

3. Added telemetry and match details:
   - Store matchStage, score, matchedPhrase, context
   - Hover tooltips show why ticker matched
   - No more naive  regex flooding

 SCANNER RELIABILITY FIXES:

1. Shared data cache implementation:
   - Batch quotes and OHLC data fetching
   - 30-second cache TTL to prevent rate limiting
   - Reuse data for both news mini-charts and scanner metrics

2. Chunked processing:
   - Process all active US symbols (no hidden filters)
   - Use shared cache instead of per-symbol API calls
   - Rate limiting protection with provider rotation

3. Enhanced technical indicators:
   - RSI, MACD, VWAP deviation, ATR, gap detection
   - News heat scoring from recent mentions
   - AI composite scoring

 UI IMPROVEMENTS:

1. Ticker chips with match details:
   - Hover shows match stage and confidence score
   - Color-coded by performance
   - No more wall of invalid tickers

2. Professional scanner table:
   - Virtualized rows for performance
   - Real-time provider health status
   - No blocking UI during data fetching

This eliminates the ticker spam and makes scanners populate reliably across all cap sizes!

--- a/index.html
+++ b/index.html
@@ -986,12 +986,17 @@
             ${badgeHtml}
             ${tickers.length > 0 ? `
               <div style="margin: 8px 0; display: flex; flex-wrap: wrap; gap: 4px;">
-                ${tickers.map(ticker => `
-                  <span style="background: var(--accent); color: white; padding: 2px 6px; border-radius: 4px; font-size: 0.8rem; cursor: pointer;" 
-                        onclick="document.getElementById('ticker').value='${ticker}'; fetchData();">
-                    $${ticker}
-                  </span>
-                `).join('')}
+                ${tickers.map((ticker, index) => {
+                  const matchDetail = n.matchDetails?.[index];
+                  const tooltip = matchDetail ? `Matched by ${matchDetail.matchStage} (score ${matchDetail.score})` : '';
+                  return `
+                    <span style="background: var(--accent); color: white; padding: 2px 6px; border-radius: 4px; font-size: 0.8rem; cursor: pointer;" 
+                          title="${tooltip}"
+                          onclick="document.getElementById('ticker').value='${ticker}'; fetchData();">
+                      $${ticker}
+                    </span>
+                  `;
+                }).join('')}
               </div>
             ` : ''}
             <div class="mini-row">
